# school_corn_scheduler

./: Cargo.toml
src/: main.rs  modal.rs
